Fixed nav links and logo not showing up in nav bar when at top of page

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -204,8 +204,12 @@ ul.banner-social-buttons {
       display: block;
       margin-bottom: 20px;
       padding: 0; }
-      ul.banner-social-buttons li:last-child {
-        margin-bottom: 0; } }
+      #mainNav .cornerLogo {
+  filter: brightness(10);
+}
+#mainNav a {
+        color: white;
+    }
 
 footer {
   padding: 50px 0; }
